hard-gists/5091825/run.log
=== Docker Run Log for 5091825 ===
Started at: Mi 29. Okt 15:21:45 CET 2025

[2025-10-29 15:21:46] START: Running container for 5091825
[2025-10-29 15:21:46] SUCCESS: Container 0a0492ed321311c14e70b4703ddb9267b84ae06cf4ec8b1a89d3a67d24e7acf7 started for 5091825
=== Container logs for 5091825 ===
  File "/snippet.py", line 15
    print "%s - %s" % (self.dmd, self.options.myoption)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5091825 ===
[2025-10-29 15:21:48] INFO: Container 0a0492ed321311c14e70b4703ddb9267b84ae06cf4ec8b1a89d3a67d24e7acf7 has stopped
